--- a/examples/test.ini
+++ b/examples/test.ini
@@ -1,13 +1,16 @@
-; Test config file for ini_example.c and INIReaderTest.cpp
+; This is a basic INI file.
 
-color = #FF32EE
+color = #FF32EE        ; This is a global property
 
 [protocol]             ; Protocol configuration
 version=6              ; IPv6
+ip =  177.20.150.132   ; IP address
 
 [user]
-name= "Bob Smith  "    ; Spaces around '=' are stripped
+name= "Bob Smith  "    ; Spaces around '=' and inside " " are stripped
 email = bob@smith.com  ; And comments (like this) ignored
-active = true          ; Test a boolean
+active = true          ; Defining a boolean
+
+[constants]
 pi = 3.14159           ; Test a floating point number
-val = 2,0              ; Test a floating point number
+pos = 2,5              ; The comma and 5 is discarded
